--- a/make_dataframe.ipynb
+++ b/make_dataframe.ipynb
@@ -28,46 +28,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "8"
-     },
-     "metadata": {},
-     "execution_count": 178
-    }
-   ],
-   "source": [
-    "len(outdata)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 179,
-   "metadata": {
-    "tags": [
-     "outputPrepend"
-    ]
-   },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "list"
-     },
-     "metadata": {},
-     "execution_count": 179
-    }
-   ],
-   "source": [
-    "type(outdata)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 180,
    "metadata": {},
    "outputs": [
@@ -137,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"./pose_angle_train.csv\",index=False)"
+    "df.to_csv(\"./input/pose_angle_train.csv\",index=False)"
    ]
   },
   {
