--- a/df_ffill.ipynb
+++ b/df_ffill.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv(\"./input/pose_angle_test.csv\")"
+    "df_train = pd.read_csv(\"./input/pose_angle_train.csv\")"
    ]
   },
   {
@@ -53,26 +53,7 @@
     }
    ],
    "source": [
-    "pd.set_option('display.max_rows', 500)\n",
     "df_train[(df_train['x_17'] == 0) & (df_train['x_18'] == 0) & (df_train['x_0'] == 0)].count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "x_0         335\ny_0         335\nscore_0     335\nx_1           0\ny_1           0\nscore_1       0\nx_2           0\ny_2           0\nscore_2       0\nx_3          70\ny_3          70\nscore_3      70\nx_4         102\ny_4         102\nscore_4     102\nx_5           0\ny_5           0\nscore_5       0\nx_6          50\ny_6          50\nscore_6      50\nx_7         179\ny_7         179\nscore_7     179\nx_8           0\ny_8           0\nscore_8       0\nx_9           1\ny_9           1\nscore_9       1\nx_10          1\ny_10          1\nscore_10      1\nx_11          1\ny_11          1\nscore_11      1\nx_12          0\ny_12          0\nscore_12      0\nx_13          0\ny_13          0\nscore_13      0\nx_14          0\ny_14          0\nscore_14      0\nx_15        398\ny_15        398\nscore_15    398\nx_16        690\ny_16        690\nscore_16    690\nx_17        442\ny_17        442\nscore_17    442\nx_18        214\ny_18        214\nscore_18    214\nx_19          7\ny_19          7\nscore_19      7\nx_20         29\ny_20         29\nscore_20     29\nx_21          1\ny_21          1\nscore_21      1\nx_22         12\ny_22         12\nscore_22     12\nx_23         32\ny_23         32\nscore_23     32\nx_24          2\ny_24          2\nscore_24      2\nangle       106\ndtype: int64"
-     },
-     "metadata": {},
-     "execution_count": 168
-    }
-   ],
-   "source": [
-    "df_train[df_train==0.0].count()"
    ]
   },
   {
@@ -136,15 +117,6 @@
    ],
    "source": [
     "df.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df= df.fillna(0)"
    ]
   },
   {
