--- a/make_dataframe.ipynb
+++ b/make_dataframe.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('poses_tread.pickle', 'rb') as f:\n",
+    "with open('row_data/poses_tread.pickle', 'rb') as f:\n",
     "  outdata = pickle.load(f)"
    ]
   },
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"./input/pose_angle_train.csv\",index=False)"
+    "df.to_csv(\"./input/pose_angle_test.csv\",index=False)"
    ]
   },
   {
